--- a/DataWarehouseKnowledgeBase.Presentation/Views/Warehouse/Analysis.cshtml
+++ b/DataWarehouseKnowledgeBase.Presentation/Views/Warehouse/Analysis.cshtml
@@ -5,6 +5,7 @@
 @model List<DataWarehouseKnowledgeBase.DAL.ViewModels.WarehouseViewModel>
 
 <h2>@ViewBag.Title</h2>
+<h3>@ViewBag.Message</h3>
 
 <div class="row">
     <div class="col-md-8">
