--- a/DataWarehouseKnowledgeBase.Presentation/Views/Warehouse/Analysis.cshtml
+++ b/DataWarehouseKnowledgeBase.Presentation/Views/Warehouse/Analysis.cshtml
@@ -5,7 +5,6 @@
 @model List<DataWarehouseKnowledgeBase.DAL.ViewModels.WarehouseViewModel>
 
 <h2>@ViewBag.Title</h2>
-<h3>@ViewBag.Message</h3>
 
 <div class="row">
     <div class="col-md-8">
@@ -77,7 +76,7 @@
                         <td>@item.Month</td>
                         <td>@item.Day</td>
                         <td>@item.WeekDay</td>
-                        <td>@item.Recommendation</td>
+                        <td>@Html.Raw(item.Recommendation)</td>
                     </tr>
                 }
             }
